Разметка и стилизация секции destinations

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </ul>
     <ul class="main-nav__user">
       <li class="main-nav__item">
-        <a class="main-nav__link  button" href="#">Sign up</a>
+        <a class="button" href="#">Sign up</a>
       </li>
     </ul>
   </nav>
@@ -70,6 +70,106 @@
     </table>
   </div>
 
+</section>
+
+<section class="destinations">
+  <h2 class="visually-hidden">Места назначения</h2>
+  <div class="container">
+
+    <p class="destinations__slogan">
+      Explore our top destinations
+    </p>
+    <p class="destinations__description">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum impedit ipsa sed?
+    </p>
+
+    <ul class="destinations__list">
+      <li class="destinations__item">
+        <picture>
+          <img src="img/destinations-1@1x.jpg" srcset="img/destinations-1@2x.jpg 2x" width="770" alt="Место назначения">
+        </picture>
+        <a class="destinations__link" href="#">
+          <span class="destinations__number-boats">
+            730
+          </span>
+          <p class="destinations__city">
+            Figueira da Foz
+          </p>
+          <p class="destionations__country">
+            Portugal
+          </p>
+        </a>
+      </li>
+      <li class="destinations__item">
+        <picture>
+          <img src="img/destinations-2@1x.jpg" srcset="img/destinations-2@2x.jpg 2x" width="370" alt="Место назначения">
+        </picture>
+        <a class="destinations__link" href="#">
+          <span class="destinations__number-boats">
+            321
+          </span>
+          <p class="destinations__city">
+            Ibiza
+          </p>
+          <p class="destionations__country">
+            Spain
+          </p>
+        </a>
+      </li>
+      <li class="destinations__item">
+        <picture>
+          <img src="img/destinations-3@1x.jpg" srcset="img/destinations-3@2x.jpg 2x" width="370" alt="Место назначения">
+        </picture>
+        <a class="destinations__link" href="#">
+          <span class="destinations__number-boats">
+            543
+          </span>
+          <p class="destinations__city">
+            Palma de Mallorca
+          </p>
+          <p class="destionations__country">
+            Spain
+          </p>
+        </a>
+      </li>
+      <li class="destinations__item">
+        <picture>
+          <img src="img/destinations-4@1x.jpg" srcset="img/destinations-4@2x.jpg 2x" width="370" alt="Место назначения">
+        </picture>
+        <a class="destinations__link" href="#">
+          <span class="destinations__number-boats">
+            495
+          </span>
+          <p class="destinations__city">
+            Portofino
+          </p>
+          <p class="destionations__country">
+            Italy
+          </p>
+        </a>
+      </li>
+      <li class="destinations__item">
+        <picture>
+          <img src="img/destinations-5@1x.jpg" srcset="img/destinations-5@2x.jpg 2x" width="370" alt="Место назначения">
+        </picture>
+        <a class="destinations__link" href="#">
+          <span class="destinations__number-boats">
+            402
+          </span>
+          <p class="destinations__city">
+            Port Hercules
+          </p>
+          <p class="destionations__country">
+            Monaco
+          </p>
+        </a>
+      </li>
+    </ul>
+
+    <p class="destinations__more">
+      <a class="button  button--destinations" href="#">Explore more destinations</a>
+    </p>
+  </div>
 </section>
 
 </body>
