Добавляет разметку и стилизацию блока Lease

--- a/index.html
+++ b/index.html
@@ -172,5 +172,19 @@
   </div>
 </section>
 
+<section class="lease">
+  <h2 class="visually-hidden">Сдача в аренду Вашей лодки</h2>
+  <div class="container">
+
+    <p class="lease__slogan">Have your own boat?</p>
+    <p class="lease__description">Navigare necesse est, vivere non est necesse</p>
+
+    <p class="lease__button-wrapper">
+      <a class="button  button--lease" href="#">Make money width your boat</a>
+    </p>
+  </div>
+</section>
+
+<header></header>
 </body>
 </html>
