Добавляет разметку и стилизацию блока Popular

--- a/index.html
+++ b/index.html
@@ -185,6 +185,108 @@
   </div>
 </section>
 
-<header></header>
+<section class="popular">
+  <div class="container">
+
+    <h2 class="popular__title">
+      Featured boats
+    </h2>
+    <p class="popular__description">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum impedit ipsa sed?
+    </p>
+
+    <ul class="popular__list">
+      <li class="popular__item">
+        <picture>
+          <img src="img/pop-1@1x.jpg" srcset="img/pop-1@2x.jpg 2x" width="573" alt="Популярная лодка">
+        </picture>
+        <a class="popular__link" href="#">
+          <span class="popular__price">
+            &#8364;580 / day
+          </span>
+          <p class="popular__model-boat">
+            Delphia 47
+          </p>
+          <div class="popular__attribute">
+            <p class="popular__city">
+              Gdansk, Poland
+            </p>
+            <p class="popular__berth">
+              8 Berths
+            </p>
+          </div>
+        </a>
+      </li>
+      <li class="popular__item">
+        <picture>
+          <img src="img/pop-2@1x.jpg" srcset="img/pop-2@2x.jpg 2x" width="573" alt="Популярная лодка">
+        </picture>
+        <a class="popular__link" href="#">
+          <span class="popular__price">
+            &#8364;950 / day
+          </span>
+          <p class="popular__model-boat">
+            Sense 55
+          </p>
+          <div class="popular__attribute">
+            <p class="popular__city">
+              Portofino, Itly
+            </p>
+            <p class="popular__berth">
+              12 Berths
+            </p>
+          </div>
+        </a>
+      </li>
+      <li class="popular__item">
+        <picture>
+          <img src="img/pop-3@1x.jpg" srcset="img/pop-3@2x.jpg 2x" width="573" alt="Популярная лодка">
+        </picture>
+        <a class="popular__link" href="#">
+          <span class="popular__price">
+            &#8364;820 / day
+          </span>
+          <p class="popular__model-boat">
+            Crusier 51
+          </p>
+          <div class="popular__attribute">
+            <p class="popular__city">
+              Palma de Mallorce, Spain
+            </p>
+            <p class="popular__berth">
+              10 Berths
+            </p>
+          </div>
+        </a>
+      </li>
+      <li class="popular__item">
+        <picture>
+          <img src="img/pop-4@1x.jpg" srcset="img/pop-4@2x.jpg 2x" width="573" alt="Популярная лодка">
+        </picture>
+        <a class="popular__link" href="#">
+          <span class="popular__price">
+            &#8364;400 / day
+          </span>
+          <p class="popular__model-boat">
+            Crusier 41S
+          </p>
+          <div class="popular__attribute">
+            <p class="popular__city">
+              Lisabon, Portugal
+            </p>
+            <p class="popular__berth">
+              8 Berths
+            </p>
+          </div>
+        </a>
+      </li>
+    </ul>
+
+    <p class="popular__more">
+      <a class="button  button--popular" href="#">Load more boats</a>
+    </p>
+  </div>
+</section>
+
 </body>
 </html>
