--- a/index.html
+++ b/index.html
@@ -288,5 +288,126 @@
   </div>
 </section>
 
+<footer class="main-footer">
+  <div class="container">
+    <div class="main-footer__wrapper">
+
+      <ul class="main-header__list">
+        <h3 class="main-header__title">Top locations</h3>
+        <li class="main-header__item">
+          <a class="main-header__link" href="#">
+            Amet, consectetur
+          </a>
+        </li>
+        <li class="main-header__item">
+          <a class="main-header__link" href="#">
+            Lorem ipsum dolor.
+          </a>
+        </li>
+        <li class="main-header__item">
+          <a class="main-header__link" href="#">
+            Adipisicing elit.
+          </a>
+        </li>
+        <li class="main-header__item">
+          <a class="main-header__link" href="#">
+            Lorem ipsum dolor sit
+          </a>
+        </li>
+        <li class="main-header__item">
+          <a class="main-header__link" href="#">
+            Alias, impedit?
+          </a>
+        </li>
+      </ul>
+
+      <ul class="main-header__list">
+        <h3 class="main-header__title">Featured boats</h3>
+        <li class="main-header__item">
+          <a class="main-header__link" href="#">
+            Amet, consectetur
+          </a>
+        </li>
+        <li class="main-header__item">
+          <a class="main-header__link" href="#">
+            Lorem ipsum dolor.
+          </a>
+        </li>
+        <li class="main-header__item">
+          <a class="main-header__link" href="#">
+            Adipisicing elit.
+          </a>
+        </li>
+        <li class="main-header__item">
+          <a class="main-header__link" href="#">
+            Lorem ipsum dolor sit
+          </a>
+        </li>
+        <li class="main-header__item">
+          <a class="main-header__link" href="#">
+            Alias, impedit?
+          </a>
+        </li>
+      </ul>
+
+      <div class="subscribe">
+        <h3 class="subscribe__title">Subscribe to newsletter</h3>
+        <form class="subscribe__form" action="#">
+          <input class="subscribe__field" type="email" placeholder="Your email adress">
+          <button class="button  button--subscribe" type="button">Subscribe</button>
+        </form>
+
+        <ul class="social">
+          <li class="social__item">
+            <a class="social__link  social__link--facebook" href="#">
+              <span class="visually-hidden">Facebook</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link  social__link--twitter" href="#">
+              <span class="visually-hidden">Twitter</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link  social__link--google" href="#">
+              <span class="visually-hidden">Google plus</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <ul class="main-header__list">
+        <h3 class="main-header__title">Contact us</h3>
+        <li class="main-header__item">
+          <a class="main-header__link" href="#">
+            Amet, consectetur
+          </a>
+        </li>
+        <li class="main-header__item">
+          <a class="main-header__link" href="#">
+            Lorem ipsum dolor.
+          </a>
+        </li>
+        <li class="main-header__item">
+          <a class="main-header__link" href="#">
+            Adipisicing elit.
+          </a>
+        </li>
+        <li class="main-header__item">
+          <a class="main-header__link" href="#">
+            Lorem ipsum dolor sit
+          </a>
+        </li>
+        <li class="main-header__item">
+          <a class="main-header__link" href="#">
+            Alias, impedit?
+          </a>
+        </li>
+      </ul>
+
+    </div>
+  </div>
+</footer>
+
 </body>
 </html>
