Добавляет webp изображения и пару иконок

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preload" href="fonts/opensans-regular.woff2" as="font">
   <link rel="preload" href="fonts/opensans-semibold.woff2" as="font">
+  <!-- build:css -->
   <link href="css/style.css" rel="stylesheet">
+  <!-- endbuild -->
 </head>
 <body>
 <header class="main-header">
@@ -15,6 +17,7 @@
   <nav class="main-nav">
     <a class="main-nav__logo" href="#">
       <picture>
+        <source type="image/webp" srcset="img/logo@1x.webp 1x, img/logo@2x.webp 2x">
         <img src="img/logo@1x.png" srcset="img/logo@2x.png 2x" width="166" height="33" alt="Логотип компании NAVA">
       </picture>
     </a>
@@ -86,6 +89,7 @@
     <ul class="destinations__list">
       <li class="destinations__item">
         <picture>
+          <source type="image/webp" srcset="img/destinations-1@1x.webp, img/destinations-1@2x.webp 2x">
           <img src="img/destinations-1@1x.jpg" srcset="img/destinations-1@2x.jpg 2x" width="770" alt="Место назначения">
         </picture>
         <a class="destinations__link" href="#">
@@ -102,6 +106,7 @@
       </li>
       <li class="destinations__item">
         <picture>
+          <source type="image/webp" srcset="img/destinations-2@1x.webp 1x, img/destinations-2@2x.webp 2x">
           <img src="img/destinations-2@1x.jpg" srcset="img/destinations-2@2x.jpg 2x" width="370" alt="Место назначения">
         </picture>
         <a class="destinations__link" href="#">
@@ -118,6 +123,7 @@
       </li>
       <li class="destinations__item">
         <picture>
+          <source type="image/webp" srcset="img/destinations-3@1x.webp 1x, img/destinations-3@2x.webp 2x">
           <img src="img/destinations-3@1x.jpg" srcset="img/destinations-3@2x.jpg 2x" width="370" alt="Место назначения">
         </picture>
         <a class="destinations__link" href="#">
@@ -134,6 +140,7 @@
       </li>
       <li class="destinations__item">
         <picture>
+          <source type="image/webp" srcset="img/destinations-4@1x.webp 1x, img/destinations-4@2x.webp 2x">
           <img src="img/destinations-4@1x.jpg" srcset="img/destinations-4@2x.jpg 2x" width="370" alt="Место назначения">
         </picture>
         <a class="destinations__link" href="#">
@@ -150,6 +157,7 @@
       </li>
       <li class="destinations__item">
         <picture>
+          <source type="image/webp" srcset="img/destinations-5@1x.webp 1x, img/destinations-5@2x.webp 2x">
           <img src="img/destinations-5@1x.jpg" srcset="img/destinations-5@2x.jpg 2x" width="370" alt="Место назначения">
         </picture>
         <a class="destinations__link" href="#">
@@ -198,6 +206,7 @@
     <ul class="popular__list">
       <li class="popular__item">
         <picture>
+          <source type="image/webp" srcset="img/pop-1@1x.webp 1x, img/pop-1@2x.webp 2x">
           <img src="img/pop-1@1x.jpg" srcset="img/pop-1@2x.jpg 2x" width="573" alt="Популярная лодка">
         </picture>
         <a class="popular__link" href="#">
@@ -219,6 +228,7 @@
       </li>
       <li class="popular__item">
         <picture>
+          <source type="image/webp" srcset="img/pop-2@1x.webp 1x, img/pop-2@2x.webp 2x">
           <img src="img/pop-2@1x.jpg" srcset="img/pop-2@2x.jpg 2x" width="573" alt="Популярная лодка">
         </picture>
         <a class="popular__link" href="#">
@@ -240,6 +250,7 @@
       </li>
       <li class="popular__item">
         <picture>
+          <source type="image/webp" srcset="img/pop-3@1x.webp 1x, img/pop-3@2x.webp 2x">
           <img src="img/pop-3@1x.jpg" srcset="img/pop-3@2x.jpg 2x" width="573" alt="Популярная лодка">
         </picture>
         <a class="popular__link" href="#">
@@ -261,6 +272,7 @@
       </li>
       <li class="popular__item">
         <picture>
+          <source type="image/webp" srcset="img/pop-4@1x.webp 1x, img/pop-4@2x.webp 2x">
           <img src="img/pop-4@1x.jpg" srcset="img/pop-4@2x.jpg 2x" width="573" alt="Популярная лодка">
         </picture>
         <a class="popular__link" href="#">
